# VanTrails

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  experiment.ipynb  main.py  pyproject.toml  run_scraper.py
data/: vancouver_trails.csv  vancouver_trails_clean.csv
evaluation/: README.md  data_processing.ipynb  methodologies.md  promptfooconfig.yaml
evaluation/generation/: evaluate_generation.py  experiment.ipynb  generation_evaluation_results.csv
evaluation/query_parser/: prompts.py  query_parser_test.csv
evaluation/retrieval/: evaluation.ipynb  test_retrieval.py  test_retrieval_result.csv
monitoring/: README.md  tracing.py
src/llm/: client.py
src/processing/: clean_data.py  query_parser.py
src/rag/: generate_recommendations.py  vector_search.py
src/scrapers/: scraper.py  vancouver_trails_scraper.py
src/workflows/: recommend_trails.py  run_scraper.py  run_vector_ingestion.py
vantrails/: README.md  __init__.py  answer.py
