[project]
name = "vantrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.15",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "numpy>=2.3.1",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scrapy>=2.13.3",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
]
